2022-02-18  Sihui Liu  <sihui_liu@apple.com>

        ASSERTION FAILED: !hasAnyOpenConnections() in UniqueIDBDatabase::~UniqueIDBDatabase()
        https://bugs.webkit.org/show_bug.cgi?id=236856

        Reviewed by Chris Dumez.

        The assertion is hit when running API test WebKit.MigrateIndexedDBDataToGeneralStorageDirectory. We need to
        properly close UniqueIDBDatabase before it's destroyed.

        * NetworkProcess/NetworkConnectionToWebProcess.cpp:
        (WebKit::NetworkConnectionToWebProcess::storageSession): remove logging as it was added when we had check for
        default session. Since we don't have the check now, the logging does not make much sense.
        * NetworkProcess/storage/IDBStorageManager.cpp:
        (WebKit::IDBStorageManager::~IDBStorageManager):
        * NetworkProcess/storage/IDBStorageManager.h:

2022-02-18  Ben Nham  <nham@apple.com>

        Hook up PushManager to permission state
        https://bugs.webkit.org/show_bug.cgi?id=236739

        Reviewed by Brady Eidson.

        Update comment explaining why we still have a permission state stub in webpushd.

        * webpushd/WebPushDaemon.mm:
        (WebPushD::Daemon::getPushPermissionState):

2022-02-18  Sihui Liu  <sihui_liu@apple.com>

        Add assertion that no two network sessions share the same storage path
        https://bugs.webkit.org/show_bug.cgi?id=236844

        Reviewed by Chris Dumez.

        Each NetworkStorageManager has its own queue and accesses the storage files on that queue, so we can't have two
        NetworkworkStorageManagers use the same path, as the path may be accessed concurrently and cause corruption. 
        Currently we have an SPI for setting custom generalStorageDirectory for WebsiteDataStore (in 
        _WKWebsiteDataStoreConfiguration), which means SPI clients can create two sessions with the same path in theory.
        Let's add an assertion to ensure that does not happen.
